removed need for shown class, fixed visibility:collapse inconsistency using display:none for hidden

--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,14 @@ nav #filters{
 }
 /*===HIDDEN FOR FILTERING===*/
 .hidden{
-	visibility: collapse;
+	display: none;
 }
-.shown{
-	visibility: visible;
+/*.shown{
+	display: block;
 }
+.shown.card-stack{
+	display: inline-flex;
+}*/
 /*===HIGHLIGHTABLE CARDS===*/
 .highlightable{
     transition: all 250ms cubic-bezier(.25,.8,.25,1);
